# src/controllers/user.controller.ts
@@ -1,0 +1,64 @@
+import { Request, Response } from "express";
+import { userService } from "../services/user.service";
+
+const getUsers = async (req: Request, res: Response) => {
+  try {
+    const users = await userService.getAllUsers();
+    res.json({
+      req: req.email,
+      users,
+    });
+  } catch (error) {
+    console.log(error);
+    if (error instanceof Error) {
+      res.status(500).json({ error: error.message });
+    } else res.status(500).json({ error: "Error de servidor" });
+  }
+};
+
+const getUser = async (req: Request, res: Response) => {
+  try {
+    const { id } = req.params;
+    const user = await userService.getUserById(id);
+    res.json(user);
+  } catch (error) {
+    console.log(error);
+    if (error instanceof Error) {
+      res.status(500).json({ error: error.message });
+    } else res.status(500).json({ error: "Error de servidor" });
+  }
+};
+
+const deleteUser = async (req: Request, res: Response) => {
+  try {
+    const { id } = req.params;
+    const user = await userService.deleteUserById(id);
+    res.json(user);
+  } catch (error) {
+    console.log(error);
+    if (error instanceof Error) {
+      res.status(500).json({ error: error.message });
+    } else res.status(500).json({ error: "Error de servidor" });
+  }
+};
+
+const updateUser = async (req: Request, res: Response) => {
+  try {
+    const { id } = req.params;
+    const { email, password } = req.body;
+    const user = await userService.updateUserById(id, email, password);
+    res.json(user);
+  } catch (error) {
+    console.log(error);
+    if (error instanceof Error) {
+      res.status(500).json({ error: error.message });
+    } else res.status(500).json({ error: "Error de servidor" });
+  }
+};
+
+export const userController = {
+  getUsers,
+  getUser,
+  deleteUser,
+  updateUser,
+};
